<resources>
    <string name="app_name">Baims Task</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="cities">Cities</string>
    <string name="weather_data">Weather Data</string>
    <string name="selected">Selected: %1$s</string>
    <string name="can_t_fetch_data">can\'t fetch data</string>
    <string name="retry">Retry</string>
    <string name="warning_data_is_not_accurate">Warning, data is not accurate</string>
</resources>